# TechProg

./: readme.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.cpp  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: CMakeLists.txt  main.cpp  main.h  main_test.cpp  tests.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp
task5/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
